2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Commands/ToolsCommands.cs: Document.Save can
	  only be called from the gui thread.

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Before building,
	  don't autosave files which don't belong to a project. Fixes
	  bug #498686 - Compiling a solution/project with a file that
	  doesn't belong to any project MD ask for write the file.

2009-08-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs:
	  Track api changes.

2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/RootWorkspace.cs: Properly reset the
	  project of a document when reloading.

2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.Gui/Document.cs:
	* MonoDevelop.Ide.Gui/RootWorkspace.cs:
	* MonoDevelop.Ide.Gui.Content/ISupportsProjectReload.cs: Added
	  support for re-binding an open file to a project. This is
	  used when reloading a project.

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Show a warning
	  when trying to save a project whose files have changed since
	  the last save.

2009-08-20  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/NewFileDialog.cs: Update project
	  association when checkbox is toggled.

2009-08-20  Christian Hergert <chris@dronelabs.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/FolderNodeBuilder.cs: Make the add
	files dialog transient for the workbench.

2009-08-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Components/ExtensibleTreeView.cs:
	* MonoDevelop.Ide.Gui.Components/ITreeBuilderContext.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs:
	  When a project is disabled in the active configuration, show
	  it grayed.

2009-08-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Templates/ProjectTemplate.cs: Fix template
	  categorization issue. The main C# category was added as a